force-app/main/default/objects/Instructor__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>A-{0}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>