force-app/main/default/objects/Instructor__c/fields/Instructor_Email__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Email__c</fullName>
    <label>Instructor Email</label>
    <type>Email</type>
</CustomField>