force-app/main/default/objects/Instructor__c/recordTypes/Instructor_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Instructor_RecordType</fullName>
    <active>true</active>
    <label>Instructor RecordType</label>
</RecordType>