force-app/main/default/objects/Instructor__c/validationRules/SubjectisMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>SubjectisMandatory</fullName>
    <active>true</active>
    <description>Subject is mandatory</description>
    <errorConditionFormula>ISBLANK(TEXT( Subject__c ))</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>Please provide the subject.</errorMessage>
</ValidationRule>