force-app/main/default/objects/Instructor__c/listViews/Science_ListView.listView-meta.xml
<ListView>
    <fullName>Science_ListView</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>Science</value>
    </filters>
    <label>Science ListView</label>
</ListView>